Change Branch deployment to test.